# isabelle-client

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.rst  Dockerfile  README.md  README.rst  conftest.py  local-build.sh  pyproject.toml  pytest.ini  readthedocs.yml  show_report.sh  spelling.dict
.circleci/: config.yml
cicm2021paper/: bib.bib  example.tex  main.tex
cicm2022paper/: Makefile  README  bib.bib  example.tex  main.tex
cicm2022talk/: README  talk.tex
doc/: conf.py  example.org  example.rst  index.rst  package-documentation.rst
doc/auto_examples/: index.rst  plot_example.ipynb  plot_example.py  plot_example.rst  sg_execution_times.rst
doc/source/: conf.py  how-to-cite.rst  how-to-contribute.rst  index.rst  package-documentation.rst  usage-example.rst
examples/: Dummy.thy  Example.thy  README.rst  ROOT  char_by_char.py  cicm2022_example.ipynb  dummy.thy  example.ipynb  example.py  plot_example.py
examples/document/: root.tex
examples/video_example/: char_by_char.py  example.txt
isabelle_client/: __init__.py  compatibility_helper.py  conftest.py  isabelle__client.py  isabelle_client.py  isabelle_connector.py  sledgehammer_connector.py  socket_communication.py  utils.py
isabelle_client/resources/: Cygwin-Isabelle.bat
isabelle_client/resources/isabelle-responses/: help  session_build  session_start
src/isabelle_client/: __init__.py  conftest.py  data_models.py  isabelle_client.py  isabelle_connector.py  socket_communication.py  utils.py
src/isabelle_client/resources/: example.txt
src/isabelle_client/resources/isabelle-responses/: purge_theories  session_build  session_start  session_stop  unknown  use_theories  use_theories.Fail  use_theories.Sledgehammer
tests/: __init__.py  isabelle
unpublished-pre-print/: cicm2022.bib  cicm2022.tex
